--- a/APCatalog/Base.lproj/Main.storyboard
+++ b/APCatalog/Base.lproj/Main.storyboard
@@ -59,13 +59,14 @@
                                                         </mask>
                                                     </variation>
                                                 </imageView>
-                                                <button opaque="NO" alpha="0.0" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="lxe-QH-13Z">
+                                                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="lxe-QH-13Z">
                                                     <rect key="frame" x="108" y="34" width="30" height="44"/>
                                                     <animations/>
                                                     <state key="normal" title="0">
                                                         <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
                                                     </state>
                                                     <connections>
+                                                        <action selector="thumbnailPictureTapped:" destination="0tC-Hq-LUa" eventType="touchUpInside" id="Fj8-en-0Zw"/>
                                                         <action selector="thumbnailTapped:" destination="0tC-Hq-LUa" eventType="touchUpInside" id="XU9-C1-YaN"/>
                                                     </connections>
                                                 </button>
@@ -83,13 +84,14 @@
                                                         </mask>
                                                     </variation>
                                                 </imageView>
-                                                <button opaque="NO" alpha="0.0" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="dFn-f4-8mw">
+                                                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="dFn-f4-8mw">
                                                     <rect key="frame" x="142" y="34" width="30" height="44"/>
                                                     <animations/>
                                                     <state key="normal" title="1">
                                                         <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
                                                     </state>
                                                     <connections>
+                                                        <action selector="thumbnailPictureTapped:" destination="0tC-Hq-LUa" eventType="touchUpInside" id="vfC-cS-HUK"/>
                                                         <action selector="thumbnailTapped:" destination="0tC-Hq-LUa" eventType="touchUpInside" id="GN5-Qb-f44"/>
                                                     </connections>
                                                 </button>
@@ -107,13 +109,14 @@
                                                         </mask>
                                                     </variation>
                                                 </imageView>
-                                                <button opaque="NO" alpha="0.0" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Zs3-rI-xyb">
+                                                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Zs3-rI-xyb">
                                                     <rect key="frame" x="108" y="82" width="30" height="44"/>
                                                     <animations/>
                                                     <state key="normal" title="2">
                                                         <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
                                                     </state>
                                                     <connections>
+                                                        <action selector="thumbnailPictureTapped:" destination="0tC-Hq-LUa" eventType="touchUpInside" id="h3O-TU-nJd"/>
                                                         <action selector="thumbnailTapped:" destination="0tC-Hq-LUa" eventType="touchUpInside" id="qRr-Lv-bmI"/>
                                                     </connections>
                                                 </button>
@@ -131,13 +134,14 @@
                                                         </mask>
                                                     </variation>
                                                 </imageView>
-                                                <button opaque="NO" alpha="0.0" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="ANS-PG-bpN">
+                                                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="ANS-PG-bpN">
                                                     <rect key="frame" x="142" y="82" width="30" height="44"/>
                                                     <animations/>
                                                     <state key="normal" title="3">
                                                         <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
                                                     </state>
                                                     <connections>
+                                                        <action selector="thumbnailPictureTapped:" destination="0tC-Hq-LUa" eventType="touchUpInside" id="hzi-e8-fq9"/>
                                                         <action selector="thumbnailTapped:" destination="0tC-Hq-LUa" eventType="touchUpInside" id="2wA-cq-SzY"/>
                                                     </connections>
                                                 </button>
@@ -155,13 +159,14 @@
                                                         </mask>
                                                     </variation>
                                                 </imageView>
-                                                <button opaque="NO" alpha="0.0" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Sjx-X7-Nk0">
+                                                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Sjx-X7-Nk0">
                                                     <rect key="frame" x="120" y="130" width="18" height="44"/>
                                                     <animations/>
                                                     <state key="normal" title="4">
                                                         <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
                                                     </state>
                                                     <connections>
+                                                        <action selector="thumbnailPictureTapped:" destination="0tC-Hq-LUa" eventType="touchUpInside" id="Ixe-kq-9SQ"/>
                                                         <action selector="thumbnailTapped:" destination="0tC-Hq-LUa" eventType="touchUpInside" id="UWt-DB-GIP"/>
                                                     </connections>
                                                 </button>
@@ -179,27 +184,28 @@
                                                         </mask>
                                                     </variation>
                                                 </imageView>
-                                                <button opaque="NO" alpha="0.0" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="x32-Iq-wut">
+                                                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="x32-Iq-wut">
                                                     <rect key="frame" x="142" y="130" width="30" height="44"/>
                                                     <animations/>
                                                     <state key="normal" title="5">
                                                         <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
                                                     </state>
                                                     <connections>
+                                                        <action selector="thumbnailPictureTapped:" destination="0tC-Hq-LUa" eventType="touchUpInside" id="Fi1-5k-c5e"/>
                                                         <action selector="thumbnailTapped:" destination="0tC-Hq-LUa" eventType="touchUpInside" id="alb-As-x0s"/>
                                                     </connections>
                                                 </button>
-                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="BRAND" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="jGT-36-BZt">
-                                                    <rect key="frame" x="184" y="34" width="55" height="21"/>
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="BRAND" lineBreakMode="tailTruncation" numberOfLines="2" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="jGT-36-BZt">
+                                                    <rect key="frame" x="184" y="34" width="392" height="17"/>
                                                     <animations/>
-                                                    <fontDescription key="fontDescription" name="HelveticaNeue-Thin" family="Helvetica Neue" pointSize="17"/>
+                                                    <fontDescription key="fontDescription" name="HelveticaNeue-Thin" family="Helvetica Neue" pointSize="14"/>
                                                     <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
                                                     <nil key="highlightedColor"/>
                                                 </label>
                                                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Model" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="kIU-bG-NtS">
-                                                    <rect key="frame" x="184" y="59" width="392" height="21"/>
+                                                    <rect key="frame" x="184" y="55" width="392" height="17"/>
                                                     <animations/>
-                                                    <fontDescription key="fontDescription" name="HelveticaNeue-Thin" family="Helvetica Neue" pointSize="17"/>
+                                                    <fontDescription key="fontDescription" name="HelveticaNeue-Thin" family="Helvetica Neue" pointSize="14"/>
                                                     <color key="textColor" white="0.33333333333333331" alpha="1" colorSpace="calibratedWhite"/>
                                                     <nil key="highlightedColor"/>
                                                 </label>
@@ -220,6 +226,7 @@
                                                 <constraint firstItem="fdT-Se-NXc" firstAttribute="trailing" secondItem="dFn-f4-8mw" secondAttribute="trailing" id="EhA-PH-X8y"/>
                                                 <constraint firstItem="7w8-cz-E5h" firstAttribute="width" secondItem="7w8-cz-E5h" secondAttribute="height" multiplier="75:109" id="FLV-3d-Pim"/>
                                                 <constraint firstItem="xwq-vO-h4j" firstAttribute="bottom" secondItem="Qay-71-jzF" secondAttribute="bottom" id="FWk-vb-k9e"/>
+                                                <constraint firstAttribute="trailingMargin" secondItem="jGT-36-BZt" secondAttribute="trailing" constant="16" id="G7R-xc-J1L"/>
                                                 <constraint firstItem="A3g-Tr-oIg" firstAttribute="bottom" secondItem="Qay-71-jzF" secondAttribute="bottom" id="IN0-Zr-UTp"/>
                                                 <constraint firstItem="oje-8M-tei" firstAttribute="top" secondItem="lxe-QH-13Z" secondAttribute="bottom" constant="4" id="IiI-Yh-czK"/>
                                                 <constraint firstItem="Zs3-rI-xyb" firstAttribute="top" secondItem="oje-8M-tei" secondAttribute="top" id="Jxr-yH-KkJ"/>
